# desktop-aquarium

./: .gitignore  PROMPT_SERVER_API.md  README.md  platformio.ini
.claude/: launch.json
.github/workflows/: aquarium-web.yml  release.yml
aquarium/: aquarium.ino  daynight.h  ota_update.h  telemetry.h  traffic.h  version.h  weather.h  wifi_config.h.template
aquarium-pi/: CMakeLists.txt  canvas.h  compat.h  daynight.h  main.cpp  prompt_server.h  telemetry.h  version.h  weather.h  wifi_config.h
aquarium-web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
aquarium-web/data/: devices.json
aquarium-web/data/_smoketest/: living-room.json  my-reef-tank.json
aquarium-web/data/_ts_test/: speed-tank.json
aquarium-web/deploy/: register.sh
aquarium-web/docs/: telemetry-schema.md
aquarium-web/public/: app.js  index.html  styles.css  tank3d.js
aquarium-web/scripts/: dev.js  mock-publisher.js
aquarium-web/src/: db.js  deviceManager.js  server.js  sim.js  store.js  traffic.js
